# CMakeTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  configure.sh  test.sh
cmake/: ConvertBoolToYesNo.cmake
doc/: CMakeLists.txt  Doxyfile.in
project/: CMakeLists.txt
project/ai-max/: aimax.h
project/board/: CMakeLists.txt  board.cpp  board.h  board_test.cpp
scripts/: ConfigureDoxygen.cmake  MakeGitCommitIDFile.cmake
source/: CMakeLists.txt
tests/: CMakeLists.txt
